--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
+    "router": "^1.3.8",
+    "routes": "^2.1.0",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
