--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mysql2": "^3.6.3",
     "router": "^1.3.8",
     "routes": "^2.1.0",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
